--- a/application-zuul-dev.yml
+++ b/application-zuul-dev.yml
@@ -1,14 +1,12 @@
 server:
   port: 1299
-
 spring:
   application:
     name: zuul-server
-
 zuul:
-  ignoredServices: '*'  #忽略所有，整个通过配置routes路由来访问
+  ignoredServices: '*' 
   routes:
     plat:
-      path:  /plat/**   #平台服务的请求路径
+      path:  /plat/**  
       serviceId: plat-service
-  prefix: /services   #请求前缀
+  prefix: /services  
