--- a/application-zuul-dev2.yml
+++ b/application-zuul-dev2.yml
@@ -8,5 +8,5 @@ zuul:
   routes:
     plat:
       path:  /plat/**  
-      serviceId: plat-service
+      serviceId: plat-server
   prefix: /services  
