--- a/application-product-dev2.yml
+++ b/application-product-dev2.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: product-server
   datasource:
-    url: jdbc:mysql///aigou-product
+    url: jdbc:mysql:///aigou-product
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
