加入商品模块的网关配置

--- a/application-zuul-dev2.yml
+++ b/application-zuul-dev2.yml
@@ -9,4 +9,7 @@ zuul:
     plat:
       path:  /plat/**  
       serviceId: plat-server
+    product:
+      path:  /product/**  
+      serviceId: product-server
   prefix: /services  
